--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "examples.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "list:test": "cd list-picker; vitest --run list-picker.spec.ts",
+    "list:test:watch": "cd list-picker; vitest list-picker.spec.ts",
+    "list:test:coverage": "cd list-picker; vitest --run --coverage list-picker.spec.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-env": "^7.25.4",
+    "@vitest/coverage-v8": "^2.0.5",
     "jest": "^29.7.0",
     "vitest": "^2.0.5"
   }
